bambu-macro/rust_hls_macro/tests/hls_attribute_is_invalid_on_enum.stderr
error: The hls macro can only be used on modules
 --> tests/hls_attribute_is_invalid_on_enum.rs:3:1
  |
3 | #[hls]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `hls` (in Nightly builds, run with -Z macro-backtrace for more info)
