bambu-macro/rust_hls_macro/tests/hls_attribute_is_invalid_on_enum.rs
use rust_hls::hls;

#[hls]
pub enum Adder {
    A,
    B,
}

fn main() {}
